--- a/tex/main.tex
+++ b/tex/main.tex
@@ -5,7 +5,9 @@
 % \usepackage{mathptmx}   % times new roman
 \usepackage{tocloft}    % table of contents
 \usepackage{graphicx}   % graphics
-\usepackage{placeins}   % manage placement of figures
+\usepackage{placeins}   % placement of figures
+\usepackage{caption}    % captions for tables
+\usepackage{subcaption} % subcaption in figures
 \usepackage[
     backend=bibtex,
     style=ieee,
@@ -29,6 +31,9 @@
     citecolor={blue!50!black},
     urlcolor={blue!80!black}
 }
+
+% table caption spacing
+\captionsetup[table]{skip=10pt}
 % ========================================== %
 % section notations
 \renewcommand*\contentsname{ 
@@ -423,9 +428,7 @@ for ant cuticle texture classification. Additionally, we compare the results of
 state-of-the-art deep learning and texture analysis methods on our proposed
 dataset. The secondary contribution is the analysis of the results of these
 methods and data analysis.
-\FloatBarrier
-\newpage
-
+\clearpage
 % ========================================== %
 % chapter 2 - Background
 \section{CHAPTER 2: BACKGROUND}
@@ -601,8 +604,7 @@ zero to nine, and have a size of 28x28 pixels, for a total of 784 features
 \cite{deng_mnist_2012}. An example output embedding of t-SNE on the
 MNIST dataset is shown in Figure \ref{fig:tsne}.
 
-\FloatBarrier
-\newpage
+\clearpage
 % ========================================== %
 % chapter 3 - literature review
 \section{CHAPTER 3: LITERATURE REVIEW}
@@ -851,40 +853,430 @@ preprocessing before the images are used in our model. We want the images to
 have a uniform size for simplicity in our classification process. Since the ant
 head images are typically centered in the image, we apply a center crop to each
 image to create a square image of the same size. Once the image is square, we
-resize each image to a fixed size of 226x226 pixels. We leave other
+resize each image to a fixed size of 256x256 pixels. We leave other
 discrepancies in the images untouched.
 
-\subsection{Models}
-% resnet 
-% vgg
+Our custom dataset of ant head images contains 2,499 images. 1072 samples of
+rough textured ant cuticle textures comprise 43\% of the dataset. The remaining
+1427 samples of smooth textured ant cuticle textures comprise 57\% of the
+dataset. To handle the imbalance of the dataset, we apply undersampling for each
+class for the training dataset. By using random stratified sampling, we
+construct a training set with 800 images per class. The remaining images are
+randomly split between test and validation, which turns out to roughly a
+60\%/20\%/20\% train, test, and validation data split. With 272 rough samples
+and 627 smooth samples left over after the stratified split, the test dataset
+has roughly 136 rough samples and 313 smooth samples. Since these leftover
+samples are split with code by 50\% there will be some rounding variance and
+therefore the test dataset built at run-time will not always have exactly the
+same number of samples.
 
-\subsection{Evaluation}
+\subsection{Models}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/images/vgg16_architecture.png}
+    \caption{VGG16 model architecture, from
+        \href{https://neurohive.io/en/}{neurohive.io}, is licensed under
+        \href{https://creativecommons.org/licenses/by/4.0/}{CC BY 4.0}. }
+    \label{fig:vgg_architecture}
+\end{figure}
+
+Our first model is \textit{visual geometry group} (VGG), a convolutional neural
+network that takes advantage of very small convolutional filters in a deep
+network architecture \cite{simonyan_very_2015}. We compare four architectures of
+VGG: VGG11, VGG13, VGG16, and VGG19. The primary difference between the
+architectures is the number of layers in each model. An example of the VGG16
+architecture is shown in Figure \ref{fig:vgg_architecture}.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.65\textwidth]{assets/images/resnet_architecture.png}
+    \caption{ResNet34 model architecture compared to VGG19 model architecture,
+        from \citeauthor*{he_deep_2015} \cite{he_deep_2015}.}
+    \label{fig:resnet_architecture}
+\end{figure}
+
+Our second model is \textit{residual network} (ResNet), a deep network
+architecture that includes shortcut connections between layers (residual
+connections) \cite{he_deep_2015}. We compare three architectures of ResNet:
+ResNet18, ResNet50, and ResNet101. Again, the primary difference between the
+architectures is the number of layers in each model. An example of the ResNet34
+architecture next to VGG19 architecture is shown in Figure
+\ref{fig:resnet_architecture}.
+
+For our ResNet models, we have two versions: randomized and pretrained. The
+randomized version is the same architecture, but the weights are randomly
+initialized. The pretrained version has weights from training on the CIFAR
+dataset, an image dataset with 1000 classes. In this case, we are fine-tuning
+the pretrained model. For VGG, we are only using the randomized version. The
+base VGG architecture also has an output layer of size 1000. Since we are
+working with a binary classification problem, we modify the architecture for all
+models to have an output layer of size 2.
+
+\subsubsection{Model Training}
+
+Each model is trained over 100 epochs, using stochastic gradient descent with
+momentum. The batch size is set to 16 images. We apply a learning rate of 0.001
+and momentum parameter of 0.9.
+
+\subsubsection{Evaluation}
 
 We evaluate the performance of the models according to standard evaluation
 methods. Since we are working with a binary classification problem, we use a
 standard confusion matrix to evaluate the accuracy, precision, and F1 score. We
 also apply Grad-CAM with manual inspection to visualize the activation weights
 for incorrectly classified images to determine which features are interfering
-with the classification. Finally, we apply t-SNE to visualize the seperation
+with the classification. Finally, we apply t-SNE to visualize the separation
 learned for the model to further analyze the classifications made by the model.
 
 \newpage
 % ========================================== %
 % chapter 5 - experimental results and analysis
 \section{CHAPTER 5: EXPERIMENTAL RESULTS AND ANALYSIS}
+
 \subsection{Environment}
 
-\subsection{Results}
+Experiments are run on an Ubuntu 18.04 LTS Lambda Labs GPU server. The server
+contains 8 NVIDIA GeForce RTX 2080 Ti graphics cards with 12GB of memory each.
+The server uses an Intel Xeon Silver 4116 with 48 total threads and maximum
+frequency of 3.000 GHz, and has 256GB of RAM. Anaconda is used to manage
+standard python packages, such as numpy, torch, and matplotlib \cite{anaconda,
+    harris_array_2020, paszke_pytorch_2019, hunter_matplotlib_2007}. Extra details
+about the server are shared in neofetch output in Figure \ref{fig:neofetch}.
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/images/neofetch.png}
+    \caption{Neofetch output for the Lambda Labs GPU server used for
+        experiments.}
+    \label{fig:neofetch}
+\end{figure}
+
+\subsection{Results}
+% ========================================== %
+% vgg results
+\subsubsection{VGG Models}
+
+To begin, we share the results on the VGG model architectures on our custom
+dataset. The classification results are summarized in a confusion matrix for
+each model. Then, the statistics for each VGG architecture are shared in Table
+\ref{tab:vgg_results} and Figure \ref{fig:vgg_results}. The results are
+collected on 8 iterations of training and averaged. The results are
+rounded to 2 decimal places where appropriate.
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{VGG11 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 101.75     & 53          \\
+        Predicted Smooth & 37.375     & 257.875     \\
+    \end{tabular}
+    \label{tab:vgg11_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{VGG13 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 95.25      & 39.375      \\
+        Predicted Smooth & 43.25      & 272.25      \\
+    \end{tabular}
+    \label{tab:vgg13_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{VGG16 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 87.5       & 42.625      \\
+        Predicted Smooth & 47.375     & 272.5       \\
+    \end{tabular}
+    \label{tab:vgg16_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{VGG19 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 91.25      & 42.125      \\
+        Predicted Smooth & 43.25      & 273.375     \\
+    \end{tabular}
+    \label{tab:vgg19_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{Average results for VGG architectures on ant head image dataset.}
+    \begin{tabular}{r|llll}
+              & Recall & Precision & F1 Score & Accuracy \\
+        \hline
+        VGG11 & 0.83   & 0.88      & 0.85     & 0.80     \\
+        VGG13 & 0.87   & 0.87      & 0.87     & 0.82     \\
+        VGG16 & 0.86   & 0.86      & 0.86     & 0.80     \\
+        VGG19 & 0.87   & 0.87      & 0.87     & 0.81     \\
+    \end{tabular}
+    \label{tab:vgg_results}
+\end{table}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/plots/vgg_average.png}
+    \caption{Average accuracy for VGG architectures on ant head image dataset.}
+    \label{fig:vgg_results}
+\end{figure}
+
+\clearpage
+% ========================================== %
+% resnet results
+\subsubsection{ResNet Models}
+
+Next, we share the results on the ResNet model architectures on our custom
+dataset with random weight initialization. The classification results are
+summarized in a confusion matrix for each model. Then, the statistics for each
+ResNet architecture are shared in Table \ref{tab:resnet_results} and Figure
+\ref{fig:resnet_results}. The results are collected on 8 iterations of training and
+averaged. The results are rounded to 2 decimal places where appropriate.
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{ResNet18 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 98.75      & 48.75       \\
+        Predicted Smooth & 39.25      & 262         \\
+    \end{tabular}
+    \label{tab:resnet18_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{ResNet50 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 81.375     & 43.625      \\
+        Predicted Smooth & 55.875     & 269.125     \\
+    \end{tabular}
+    \label{tab:resnet50_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{ResNet101 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 85.75      & 53.875      \\
+        Predicted Smooth & 50.125     & 260.25      \\
+    \end{tabular}
+    \label{tab:resnet101_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{Average results for ResNet architectures on ant head image dataset.}
+    \begin{tabular}{r|llll}
+                  & Recall & Precision & F1 Score & Accuracy \\
+        \hline
+        ResNet18  & 0.84   & 0.87      & 0.85     & 0.80     \\
+        ResNet50  & 0.86   & 0.83      & 0.84     & 0.77     \\
+        ResNet101 & 0.83   & 0.84      & 0.83     & 0.76     \\
+    \end{tabular}
+    \label{tab:resnet_results}
+\end{table}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/plots/resnet_average.png}
+    \caption{Average accuracy for ResNet architectures on ant head image dataset.}
+    \label{fig:resnet_results}
+\end{figure}
+
+\clearpage
+% ========================================== %
+% resnet results
+\subsubsection{Fine-tuned ResNet Models}
+
+Next, we share the results on the fine-tuned ResNet model architectures on our
+custom dataset with pretrained weights. The classification results are
+summarized in a confusion matrix for each model. Then, the statistics for each
+ResNet architecture are shared in Table \ref{tab:fresnet_results} and Figure
+\ref{fig:fresnet_results}. The results are collected on 8 iterations of training
+and averaged. The results are rounded to 2 decimal places where appropriate.
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{Fine-tuned ResNet18 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 117.375    & 35.125      \\
+        Predicted Smooth & 17.875     & 279.625     \\
+    \end{tabular}
+    \label{tab:fresnet18_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{Fine-tuned ResNet50 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 114.5      & 33.25       \\
+        Predicted Smooth & 24.125     & 278.125     \\
+    \end{tabular}
+    \label{tab:fresnet50_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{Fine-tuned ResNet101 confusion matrix on ant head image dataset.}
+    \begin{tabular}{r|ll}
+                         & True Rough & True Smooth \\
+        \hline
+        Predicted Rough  & 117.25     & 33.25       \\
+        Predicted Smooth & 18.375     & 281.125     \\
+    \end{tabular}
+    \label{tab:fresnet101_confusion_matrix}
+\end{table}
+
+\vspace{0.5in}
+
+\begin{table}[h]
+    \centering
+    \caption{Average results for Fine-tuned ResNet architectures on ant head image dataset.}
+    \begin{tabular}{r|llll}
+                  & Recall & Precision & F1 Score & Accuracy \\
+        \hline
+        ResNet18  & 0.89   & 0.94      & 0.91     & 0.88     \\
+        ResNet50  & 0.89   & 0.92      & 0.91     & 0.87     \\
+        ResNet101 & 0.89   & 0.94      & 0.92     & 0.88     \\
+    \end{tabular}
+    \label{tab:fresnet_results}
+\end{table}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/plots/resnet_finetuned_average.png}
+    \caption{Average accuracy for fine-tuned ResNet architectures on ant head image dataset.}
+    \label{fig:fresnet_results}
+\end{figure}
+
+\clearpage
+% ========================================== %
+% fine-tuned resnet results
 \subsection{Analysis}
-\newpage
+
+The results in the previous sections show that the fine-tuned ResNet models
+outperform the VGG and randomly initialized ResNet models on the task of ant
+head image classification. It should be noted that due to the class imbalance in
+the dataset, the F1 score is the preferable metric to the accuracy. On average,
+the fine-tuned ResNet101 model performed the best with an average F1 score of
+0.92. We further analyze the separation learned by both ResNet101 models in the
+following section.
+
+\subsubsection{t-SNE Visualization}
+
+\begin{figure}[h]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \includegraphics[width=1\linewidth]{assets/plots/resnet101_gt_tsne.png}
+        % \caption{Ground truth labels}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \includegraphics[width=1\linewidth]{assets/plots/resnet101_pred_tsne.png}
+        % \caption{Predicted labels}
+    \end{subfigure}
+    \caption{t-SNE visualization of the embeddings of the second to last layer of the
+        trained randomly initialized ResNet101 model.}
+    \label{fig:resnet101_tsne}
+\end{figure}
+
+In this section, we provide visualization of the fine-tuned ResNet101 model and
+the randomly initialized ResNet101 model using t-SNE dimensionality reduction.
+First, we run the dataset preprocessing method and initialize both models. Then,
+both models are trained according to the training parameters and the state of
+each model is saved. To visualize the deep extracted features, we modify each
+model to obtain the embeddings of the second to last layer. Then, we use the
+t-SNE algorithm to reduce the dimensionality of the embeddings to 2 dimensions.
+We plot side-by-side the ground truth and predicted labels for each model.
+Figure \ref{fig:resnet101_tsne} shows the results of the trained randomly
+initialized model and Figure \ref{fig:fresnet101_tsne} shows the results of the
+fine-tuned model.
+
+\begin{figure}[h]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \includegraphics[width=1\linewidth]{assets/plots/fresnet101_gt_tsne.png}
+        % \caption{Ground truth labels}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \includegraphics[width=1\linewidth]{assets/plots/fresnet101_pred_tsne.png}
+        % \caption{Predicted labels}
+    \end{subfigure}
+    \caption{t-SNE visualization of the embeddings of the second to last layer of the
+        fine-tuned ResNet101 model.}
+    \label{fig:fresnet101_tsne}
+\end{figure}
+
+Based on the visual results of the t-SNE visualization, we can see that the
+fine-tuned model learned a stronger separation of the two classes, which
+reinforces the results that the fine-tuned model received a higher average
+accuracy.
+
+\clearpage
 % ========================================== %
 % chapter 6 - conclusion
 \section{CHAPTER 6: CONCLUSION}
 
 \subsection{Conclusion}
 
+All code is publicly available on
+GitHub\footnote{\href{https://github.com/ngngardner/cuticulus}
+    {https://github.com/ngngardner/cuticulus}}.
+
 \subsection{Future Work}
+
+Since we analyze the results of the VGG model only with randomly initialized
+weights, future work should also include the results of fine-tuned VGG models to
+compare to the fine-tuned ResNet models. Additionally, other texture analysis
+methods which are trained on texture datasets should be added to the comparison.
+Future work will have a custom algorithm for solving the problem of ant cuticle
+texture categorization.
+
 \newpage
 % ========================================== %
 % bibliography
