--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -653,3 +653,88 @@
                Vector, convolutional neural network},
   pages     = {3606--3613}
 }
+
+@article{simonyan_very_2015,
+  title    = {Very {Deep} {Convolutional} {Networks} for {Large}-{Scale} {Image}
+              {Recognition}},
+  url      = {http://arxiv.org/abs/1409.1556},
+  journal  = {arXiv:1409.1556 [cs]},
+  author   = {Simonyan, Karen and Zisserman, Andrew},
+  month    = apr,
+  year     = {2015},
+  note     = {arXiv: 1409.1556},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition}
+}
+
+@article{he_deep_2015,
+  title    = {Deep {Residual} {Learning} for {Image} {Recognition}},
+  url      = {http://arxiv.org/abs/1512.03385},
+  journal  = {arXiv:1512.03385 [cs]},
+  author   = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  month    = dec,
+  year     = {2015},
+  note     = {arXiv: 1512.03385},
+  keywords = {Computer
+              Science - Computer Vision and Pattern Recognition}
+}
+
+@article{harris_array_2020,
+  title     = {Array programming with {NumPy}},
+  author    = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+               van der Walt and Ralf Gommers and Pauli Virtanen and David
+               Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+               Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+               and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+               Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+               R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+               G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+               Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+               Travis E. Oliphant},
+  year      = {2020},
+  month     = sep,
+  journal   = {Nature},
+  volume    = {585},
+  number    = {7825},
+  pages     = {357--362},
+  doi       = {10.1038/s41586-020-2649-2},
+  publisher = {Springer Science and Business Media {LLC}},
+  url       = {https://doi.org/10.1038/s41586-020-2649-2}
+}
+
+@article{hunter_matplotlib_2007,
+  author    = {Hunter, J. D.},
+  title     = {Matplotlib: A 2D graphics environment},
+  journal   = {Computing in Science \& Engineering},
+  volume    = {9},
+  number    = {3},
+  pages     = {90--95},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = {2007}
+}
+
+@incollection{paszke_pytorch_2019,
+  title     = {PyTorch: An Imperative Style, High-Performance Deep Learning
+               Library},
+  author    = {Paszke, Adam and Gross, Sam and Massa, Francisco and
+               Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and
+               Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and
+               Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and
+               Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and
+               Bai, Junjie and Chintala, Soumith},
+  booktitle = {Advances in Neural
+               Information Processing Systems 32},
+  pages     = {8024--8035},
+  year      = {2019},
+  publisher = {Curran
+               Associates, Inc.},
+  url       = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+@misc{anaconda,
+  title     = {Anaconda Software Distribution},
+  url       = {https://docs.anaconda.com/},
+  journal   = {Anaconda Documentation},
+  version   = {Vers. 2-2.4.0},
+  publisher = {Anaconda Inc.},
+  year      = {2020}
+}
