finish results, conclusion

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1121,7 +1121,7 @@ averaged. The results are rounded to 2 decimal places where appropriate.
 
 \clearpage
 % ========================================== %
-% resnet results
+% fine-tuned resnet results
 \subsubsection{Fine-tuned ResNet Models}
 
 Next, we share the results on the fine-tuned ResNet model architectures on our
@@ -1197,7 +1197,7 @@ and averaged. The results are rounded to 2 decimal places where appropriate.
 
 \clearpage
 % ========================================== %
-% fine-tuned resnet results
+% analysis
 \subsection{Analysis}
 
 The results in the previous sections show that the fine-tuned ResNet models
@@ -1220,8 +1220,9 @@ following section.
         \includegraphics[width=1\linewidth]{assets/plots/resnet101_pred_tsne.png}
         % \caption{Predicted labels}
     \end{subfigure}
-    \caption{t-SNE visualization of the embeddings of the second to last layer of the
-        trained randomly initialized ResNet101 model.}
+    \caption{t-SNE visualization of the embeddings of the second to last layer
+        of the randomly initialized ResNet101 model trained on ant head image
+        dataset.}
     \label{fig:resnet101_tsne}
 \end{figure}
 
@@ -1247,8 +1248,8 @@ fine-tuned model.
         \includegraphics[width=1\linewidth]{assets/plots/fresnet101_pred_tsne.png}
         % \caption{Predicted labels}
     \end{subfigure}
-    \caption{t-SNE visualization of the embeddings of the second to last layer of the
-        fine-tuned ResNet101 model.}
+    \caption{t-SNE visualization of the embeddings of the second to last layer
+        of the fine-tuned ResNet101 model trained on ant head image dataset.}
     \label{fig:fresnet101_tsne}
 \end{figure}
 
@@ -1258,13 +1259,166 @@ reinforces the results that the fine-tuned model received a higher average
 accuracy.
 
 \clearpage
+\subsubsection{GradCAM Visualization}
+
+In this section, we provide some visual analysis of some correctly and
+incorrectly classified images using GradCAM. We provide two categories and two
+subcategories in our analysis. The two categories are correct and incorrect
+classification. Regardles of the feature activation map, the correctly
+classified images have the same predicted label as the ground truth, and
+incorrectly classified images have different predicted labels. The two
+subcategories are ideal and non-ideal feature activation. In the ideal case, the
+features that are used to compute the classification are the same as the
+features used by the assistants in the sculpture identification process. In
+general, the features used by the assistants are the textures of the cuticle on
+the ant head. In the non-ideal case, the features used to compute the
+classification are not from the head, for example, from the background,
+extraneous text, or the body of the ant. We used randomly selected images from
+the dataset and the fine-tuned ResNet101 model to perform the analysis. We show
+the GradCAM results in Figures \ref{fig:correct_ideal},
+\ref{fig:correct_nonideal}, \ref{fig:incorrect_ideal}, and
+\ref{fig:incorrect_nonideal}. The left image shows the preprocessed image input
+to the model. The right image shows the GradCAM output based on the
+classification. Four specimens were selected randomly from each category and
+subcategory.
+
+Correctly classified images which use ideal features show the ideal performance
+of the model. Incorrectly classified images which use ideal features should be
+further analysis. In essence, the model in this situation knows \textit{where}
+to look, but not \textit{what} to look for. In Figure
+\ref{fig:incorrect_ideal_84}, the features activated are mostly in the correct
+location on the ant head, and the rough texture is clearly visible, yet the
+model predicts the incorrect class \textit{smooth}. Similarly in Figure
+\ref{fig:incorrect_ideal_177}, the features activated are also mostly in the
+correct location, yet the model predicts the incorrect class \textit{smooth}. In
+this case, it may be due to the pose of the ant being slightly different from
+the average pose. In the incorrectly classified images with non-ideal features,
+analysis shows that the model is unable to find \textit{where} to look, and
+obtains feature information from other parts of the ant or the background. Cases
+where the image was correctly classified using the non-ideal features can
+basically be seen as noise. In order to further analyze this class, we should
+introduce some parameter such as model confidence to examine further.
+
+\newcommand{\subwidth}{0.7\textwidth}
+\begin{figure}
+    \centering
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_ideal/518.png}
+        \caption{Ground truth: smooth}
+        \label{fig:correct_ideal_518}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_ideal/808.png}
+        \caption{Ground truth: smooth}
+        \label{fig:correct_ideal_808}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_ideal/842.png}
+        \caption{Ground truth: rough}
+        \label{fig:correct_ideal_842}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_ideal/1091.png}
+        \caption{Ground truth: rough}
+        \label{fig:correct_ideal_1091}
+    \end{subfigure}
+    \caption{Correctly classified images using ideal features.}
+    \label{fig:correct_ideal}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_nonideal/346.png}
+        \caption{Ground truth: rough}
+        \label{fig:correct_nonideal_346}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_nonideal/1554.png}
+        \caption{Ground truth: rough}
+        \label{fig:correct_nonideal_1554}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_nonideal/1694.png}
+        \caption{Ground truth: rough}
+        \label{fig:correct_nonideal_1694}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/correct_nonideal/388.png}
+        \caption{Ground truth: smooth}
+        \label{fig:correct_nonideal_388}
+    \end{subfigure}
+    \caption{Correctly classified images using non-ideal features.}
+    \label{fig:correct_nonideal}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_ideal/84.png}
+        \caption{Ground truth: rough}
+        \label{fig:incorrect_ideal_84}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_ideal/86.png}
+        \caption{Ground truth: smooth}
+        \label{fig:incorrect_ideal_86}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_ideal/177.png}
+        \caption{Ground truth: smooth}
+        \label{fig:incorrect_ideal_177}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_ideal/197.png}
+        \caption{Ground truth: smooth}
+        \label{fig:incorrect_ideal_197}
+    \end{subfigure}
+    \caption{Incorrectly classified images using ideal features.}
+    \label{fig:incorrect_ideal}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_nonideal/1.png}
+        \caption{Ground truth: rough}
+        \label{fig:incorrect_nonideal_1}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_nonideal/22.png}
+        \caption{Ground truth: rough}
+        \label{fig:incorrect_nonideal_22}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_nonideal/61.png}
+        \caption{Ground truth: rough}
+        \label{fig:incorrect_nonideal_61}
+    \end{subfigure}
+    \begin{subfigure}{\subwidth}
+        \includegraphics[width=1\linewidth]{assets/gradcam/incorrect_nonideal/204.png}
+        \caption{Ground truth: rough}
+        \label{fig:incorrect_nonideal_204}
+    \end{subfigure}
+    \caption{Incorrectly classified images using non-ideal features.}
+    \label{fig:incorrect_nonideal}
+\end{figure}
+
+\clearpage
 % ========================================== %
 % chapter 6 - conclusion
 \section{CHAPTER 6: CONCLUSION}
 
 \subsection{Conclusion}
-
-All code is publicly available on
+Ant cuticle texture presumably has some function, but without the proper tools,
+evaluating the function based on thousands of species is infeasible. We have
+shown in this work that a deep learning approach can be used to automatically
+categorize ants based on their cuticle texture, therefore supporting research on
+the evaluation of the function in future work. Our categorization system is
+novel in the field of automated insect indentification due to the broad number
+of species captured by it. Additionally, a model that is pre-trained on a
+diverse image task such as ResNet can be transferred to our domain of texture
+analysis. All code is publicly available on
 GitHub\footnote{\href{https://github.com/ngngardner/cuticulus}
     {https://github.com/ngngardner/cuticulus}}.
 
@@ -1275,7 +1429,8 @@ weights, future work should also include the results of fine-tuned VGG models to
 compare to the fine-tuned ResNet models. Additionally, other texture analysis
 methods which are trained on texture datasets should be added to the comparison.
 Future work will have a custom algorithm for solving the problem of ant cuticle
-texture categorization.
+texture categorization. In addition, future work should include some data
+augmentation method to deal with the imbalanced dataset problem.
 
 \newpage
 % ========================================== %
